added past sessions fragment

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,13 +40,14 @@ dependencies {
     implementation 'com.github.jorgecastilloprz:fabprogresscircle:1.01@aar'
 
     implementation 'com.squareup.okhttp3:okhttp:3.11.0'
-    implementation ('com.squareup.retrofit2:retrofit:2.4.0'){
+    implementation('com.squareup.retrofit2:retrofit:2.4.0') {
         // exclude Retrofit’s OkHttp peer-dependency module and define your own module import
         exclude module: 'okhttp'
     }
     implementation 'com.squareup.retrofit2:converter-moshi:2.4.0'
 
     implementation 'com.squareup.moshi:moshi-kotlin:1.6.0'
+    implementation 'com.android.support:support-v4:27.1.1'
     kapt 'com.squareup.moshi:moshi-kotlin-codegen:1.6.0'
 
     testImplementation 'junit:junit:4.12'
